# apple-midi-mcp

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Makefile  README.md  issues.jsonl
src/: main.cpp  mcp_handler.cpp  mcp_handler.h  mcp_server.cpp  mcp_server.h  midi_bridge.cpp  midi_bridge.h
test/: test_protocol.sh
